<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mrxu.main.MPOSConnectActivity">

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.example.mrxu.myviews.EleMentTitle
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.example.mrxu.myviews.EleMentTitle>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/title_bar"
            android:orientation="vertical">


            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@mipmap/shuakazhifu_bg"
                android:paddingLeft="60px"
                android:paddingRight="60px">


                <com.zhy.autolayout.AutoRelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="50px"
                    android:background="@mipmap/new_shuakazhifu_01_img"
                    android:padding="20px">

                    <TextView
                        android:id="@+id/support_card_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="支持所有银联标准卡"
                        android:textColor="@color/white"
                        android:textSize="@dimen/all_textsize" />

                    <TextView
                        android:id="@+id/connect_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="正在连接"
                        android:textColor="@color/white"
                        android:textSize="@dimen/all_textsize" />

                    <ProgressBar
                        android:id="@+id/connect_pro"
                        android:layout_width="90px"
                        android:layout_height="90px"
                        android:padding="20px"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/connect_tv"
                        android:layout_toEndOf="@+id/connect_tv">

                    </ProgressBar>

                </com.zhy.autolayout.AutoRelativeLayout>


            </com.zhy.autolayout.AutoRelativeLayout>

            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.zhy.autolayout.AutoLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_above="@+id/connect_bt"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/huadongview_textmargin">


                    <TextView
                        android:id="@+id/shuaka_tishi_tv1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/huadongview_textmargin"
                        android:text="@string/con_tips1"
                        android:textSize="@dimen/all_textsize" />

                    <TextView
                        android:id="@+id/shuaka_tishi_tv2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/huadongview_textmargin"
                        android:text="@string/con_tips2"
                        android:textSize="@dimen/all_textsize" />

                    <TextView
                        android:id="@+id/shuaka_tishi_tv3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/huadongview_textmargin"
                        android:text="@string/con_tips3"
                        android:textSize="@dimen/all_textsize" />

                    <TextView
                        android:id="@+id/shuaka_tishi_tv4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/huadongview_textmargin"
                        android:text=""
                        android:textSize="@dimen/all_textsize" />


                </com.zhy.autolayout.AutoLinearLayout>


                <Button
                    android:id="@+id/connect_bt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="重新连接设备"
                    android:textSize="@dimen/all_maxtextsize"
                    android:textColor="@color/white"
                    android:background="@drawable/select_button_login"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="20px"/>



            </com.zhy.autolayout.AutoRelativeLayout>






        </com.zhy.autolayout.AutoLinearLayout>


    </com.zhy.autolayout.AutoRelativeLayout>

</RelativeLayout>
